Index alterado prueba

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </section>
   <section class="proyects">
     <div class="contenedor">
-      <h2 class="titulo-seccion">Produccion paso a paso.</h2>
+      <h2 class="titulo-seccion">Produccion paso a paso.ALTERED</h2>
       <p class="copy">Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
       <div class="contenedor-imagenes">
           <img src="./Imagenes/ruedasdemadera.jpg"alt="ruedas de madera">
