agregue animacion en los tres pilares

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -30,17 +30,15 @@
       </div>
     </nav>
   </header>
-  <section>
-    <main >
-      <img src="../Imagenes/logoredondo.png" alt="Niños jugando">
-      <div>
-      <p>Bau Juguetes Didácticos es un emprendimiento familiar, ubicado en la Provincia de Mendoza, nace en el año 2017, desarrollando productos innovadores para incentivar la creatividad y la imaginación.El objetivo de los juegos es volver a la esencia, al encuentro con materiales nobles,sensibilizando los sentidos, invitando a combinarlos, explorarlos de manera creativa, personal y divertida.</p>
-      <p>El espíritu que anima cada uno de los productos privilegia la calidad, originalidad y el diseño. Invitan al encuentro familiar, creando un espacio para compartir divertidos y muy gratos momentos.</p>
-      <p>Están pensados para chicos de 3 meses en adelante, ya que no hay límite de edad para explorar nuevas sensaciones, desarrollar la imaginación y divertirse.</p>
-      <p>¡Los invitamos a disfrutarlos!</p>
-      </div>
-    </main>
-  </section>
+  <main class="main2">
+    <img src="../Imagenes/logoredondo.png" alt="Niños jugando" class="imagen-main2">
+  <div class="historia" >
+    <p>Bau Juguetes Didácticos es un emprendimiento familiar, ubicado en la Provincia de Mendoza, nace en el año 2017, desarrollando productos innovadores para incentivar la creatividad y la imaginación.El objetivo de los juegos es volver a la esencia, al encuentro con materiales nobles,sensibilizando los sentidos, invitando a combinarlos, explorarlos de manera creativa, personal y divertida.</p>
+    <p>El espíritu que anima cada uno de los productos privilegia la calidad, originalidad y el diseño. Invitan al encuentro familiar, creando un espacio para compartir divertidos y muy gratos momentos.</p>
+    <p>Están pensados para chicos de 3 meses en adelante, ya que no hay límite de edad para explorar nuevas sensaciones, desarrollar la imaginación y divertirse.</p>
+    <p>¡Los invitamos a disfrutarlos!</p>
+  </div>
+  </main>
 <hr>
   <footer>
     <footer class="fondo-footer">
