--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </section>
   <section class="proyects">
     <div class="contenedor">
-      <h2 class="titulo-seccion">Produccion paso a paso.ALTERED</h2>
+      <h2 class="titulo-seccion">Produccion paso a paso.</h2>
       <p class="copy">Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
       <div class="contenedor-imagenes">
           <img src="./Imagenes/ruedasdemadera.jpg"alt="ruedas de madera">
@@ -70,7 +70,7 @@
 
   <footer class="fondo-footer">
     <div class="contenedor">
-      <h2 class="titulo-seccion2"> Contactate con nosotros</h2>
+      <h3 class="titulo-seccion2"> Contactate con nosotros</h3>
     </div>
     <div class="redes-sociales">
       <i class="fa-brands fa-facebook-square"></i>
