--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos.css">
     <title>Nosotros</title>
 </head>
@@ -30,20 +31,18 @@
       </div>
     </nav>
   </header>
-  <main class="main2">
-    <img src="../Imagenes/logoredondo.png" alt="Niños jugando" class="imagen-main2">
-  <div class="historia" >
-    <p>Bau Juguetes Didácticos es un emprendimiento familiar, ubicado en la Provincia de Mendoza, nace en el año 2017, desarrollando productos innovadores para incentivar la creatividad y la imaginación.El objetivo de los juegos es volver a la esencia, al encuentro con materiales nobles,sensibilizando los sentidos, invitando a combinarlos, explorarlos de manera creativa, personal y divertida.</p>
-    <p>El espíritu que anima cada uno de los productos privilegia la calidad, originalidad y el diseño. Invitan al encuentro familiar, creando un espacio para compartir divertidos y muy gratos momentos.</p>
-    <p>Están pensados para chicos de 3 meses en adelante, ya que no hay límite de edad para explorar nuevas sensaciones, desarrollar la imaginación y divertirse.</p>
-    <p>¡Los invitamos a disfrutarlos!</p>
+  
+  <h2>Nosotros</h2>
+  <div class="container-fluid nosotros">
+    <div class="row">
+      <div class="nizquierda col-md-6"> </div>
+      <div class="nderecha col-md-6"></div>
+    </div>
   </div>
-  </main>
-<hr>
   <footer>
     <footer class="fondo-footer">
       <div class="contenedor">
-        <h2 class="titulo-seccion2"> Contactate con nosotros</h2>
+        <h3 class="titulo-seccion2"> Contactate con nosotros</h3>
       </div>
       <div class="redes-sociales">
         <i class="fa-brands fa-facebook-square"></i>
@@ -60,5 +59,12 @@
         </ul>
       </div>
   </footer>
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 </body>
 </html>
